# seedcoin

./: deploy-live-staking-simple.js  index.html  initialize-dao-state.js  initialize-seeddao.js  package-lock.json  package.json  pnpm-lock.yaml  sdao-staking-config.json  seeddao-config.json  setup-live-staking.js  staking-test-report.json  test-completely-live-staking.js  test-live-staking.js  test-real-staking.js  test-simple-staking.js  test-staking-fix.js  test-staking-persistence.js  vite.config.js
live-staking/: Anchor.toml  deploy-live-staking.js
sdao-staking/: Anchor.toml  Cargo.toml
sdao-staking-simple/: Anchor.toml  frontend-integration.js  package-lock.json
seeddao/: Anchor.toml  README.md  initialize-dao.js  package.json
seeddao-simple/: Anchor.toml  README.md  metadata.json  package.json  simple-init.js  test-program-direct.js  verify-deployment.js
seeddao/programs/seeddao/: Cargo.toml
seeddao/programs/seeddao/src/: lib.rs
seeddao/programs/seeddao/src/instructions/: claim_rewards.rs  create_proposal.rs  execute_proposal.rs  initialize_dao.rs  mod.rs  stake_tokens.rs  unstake_tokens.rs  update_dao.rs  vote_proposal.rs
seeddao/programs/seeddao/src/state/: dao.rs  mod.rs  proposal.rs  stake.rs  vote.rs
seedstable/: Anchor.toml  add-metadata.js  get-discriminators.js  (+4 more)
seedstable/programs/seedstable/: Cargo.toml
seedstable/programs/seedstable/src/: error.rs  lib.rs
seedstable/programs/seedstable/src/instructions/: deposit_collateral.rs  initialize.rs  mod.rs  oracle_update.rs
seedstable/programs/seedstable/src/state/: collateral.rs  mod.rs
(+39 files in other folders)
