[package]
name = "seeddao"
version = "0.1.0"
description = "SeedDAO governance token and DAO management program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "seeddao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token"] }
