[package]
name = "seedstable"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "seedstable"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"

[features]
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token"] }
